Refactor EmailConfig and update tests for improved clarity and functionality
- Refactored EmailValidationTarget in EmailConfig to use a record for better readability and maintainability.
- Updated AuthControllerUpdateCredentialsIntegrationTest to utilize List.of() for role assignments, enhancing code clarity.
- Added new tests in KidProfileServiceTest for updating kid profiles, ensuring robust validation and error handling for various scenarios.
- Enhanced ConsentWithdrawServiceTest by removing unnecessary casting, streamlining the code.